Actualizacion de mi sitio web

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="¡Claro Nicaragua!" class="logo" />
+    <img src="logo-removebg-preview.png" width="105" height="500" alt="¡Claro Nicaragua!" class="logo" />
     <nav>
       <ul>
         <li><a href="#" data-section="inicio">Inicio</a></li>
@@ -25,9 +25,6 @@
     <section id="inicio" class="seccion-activa galeria">
       <h2>Promociones Claro</h2>
       <div class="collage">
-        <div><img src="images/claro-nic.jpg" alt="Recarga y gana GB" /><p>Recarga y gana GB</p></div>
-        <div><img src="promo2.jpg" alt="Planes ilimitados" /><p>Planes ilimitados</p></div>
-        <div><img src="promo3.jpg" alt="Compra tu SIM" /><p>Compra tu SIM</p></div>
         <div><img src="promo4.jpg" alt="Claro TV HD" /><p>Claro TV HD</p></div>
         <div><img src="promo5.jpg" alt="Recarga fácil" /><p>Recarga fácil</p></div>
         <div><img src="promo6.jpg" alt="Bonos exclusivos" /><p>Bonos exclusivos</p></div>
@@ -96,6 +93,8 @@
     <section id="hogar">
       <h2>Claro Hogar</h2>
       <p>Solicita nuestro servicio de Claro Hogar con TV HD y conexión a internet de alta velocidad al mejor precio. ¡Llama ya y descubre los paquetes promocionales!</p>
+    <img src="imagen.png"  width="800" height="580" alt="" />
+
     </section>
   </main>
 
