--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <section id="inicio" class="seccion-activa galeria">
       <h2>Promociones Claro</h2>
       <div class="collage">
-        <!-- Videos embebidos -->
-        <div><iframe width="280" height="158" src="https://www.youtube.com/embed/jEhU5ofUhJw"></iframe><p>Claro TV HD</p></div>
-        <div><iframe width="280" height="158" src="https://www.youtube.com/embed/UyMP71Kz-e8"></iframe><p>Recarga fácil</p></div>
-        <div><iframe width="280" height="158" src="https://www.youtube.com/embed/PqPIp5X-BNs"></iframe><p>Bonos exclusivos</p></div>
-        <div><iframe width="280" height="158" src="https://www.youtube.com/embed/bAc28YEKFPU"></iframe><p>Planes prepago</p></div>
-        <div><iframe width="280" height="158" src="https://www.youtube.com/embed/CAaedJUQXNg"></iframe><p>Internet veloz</p></div>
-        <div><iframe width="280" height="158" src="https://www.youtube.com/embed/LYHzsO1w4s8"></iframe><p>Claro Hogar</p></div>
+        <!-- Videos embebidos actualizados -->
+        <div><iframe width="280" height="158" src="https://www.youtube.com/embed/jEhU5ofUhJw" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe><p>Claro TV HD</p></div>
+        <div><iframe width="280" height="158" src="https://www.youtube.com/embed/UyMP71Kz-e8" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe><p>Recarga fácil</p></div>
+        <div><iframe width="280" height="158" src="https://www.youtube.com/embed/PqPIp5X-BNs" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe><p>Bonos exclusivos</p></div>
+        <div><iframe width="280" height="158" src="https://www.youtube.com/embed/bAc28YEKFPU" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe><p>Planes prepago</p></div>
+        <div><iframe width="280" height="158" src="https://www.youtube.com/embed/CAaedJUQXNg" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe><p>Internet veloz</p></div>
+        <div><iframe width="280" height="158" src="https://www.youtube.com/embed/LYHzsO1w4s8" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe><p>Claro Hogar</p></div>
       </div>
     </section>
 
