Actualizacion del index.html

--- a/index.html
+++ b/index.html
@@ -23,17 +23,48 @@
 
   <main class="container">
     <section id="inicio" class="seccion-activa galeria">
-      <h2>Promociones Claro</h2>
-      <div class="collage">
-        <!-- Videos embebidos actualizados -->
-        <div><iframe width="280" height="158" src="https://www.youtube.com/embed/jEhU5ofUhJw" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe><p>Claro TV HD</p></div>
-        <div><iframe width="280" height="158" src="https://www.youtube.com/embed/UyMP71Kz-e8" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe><p>Recarga fácil</p></div>
-        <div><iframe width="280" height="158" src="https://www.youtube.com/embed/PqPIp5X-BNs" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe><p>Bonos exclusivos</p></div>
-        <div><iframe width="280" height="158" src="https://www.youtube.com/embed/bAc28YEKFPU" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe><p>Planes prepago</p></div>
-        <div><iframe width="280" height="158" src="https://www.youtube.com/embed/CAaedJUQXNg" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe><p>Internet veloz</p></div>
-        <div><iframe width="280" height="158" src="https://www.youtube.com/embed/LYHzsO1w4s8" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe><p>Claro Hogar</p></div>
-      </div>
-    </section>
+  <h2>Promociones Claro</h2>
+  <div class="collage">
+    <!-- Videos como enlaces con miniaturas -->
+    <div>
+      <a href="https://www.youtube.com/watch?v=jEhU5ofUhJw" target="_blank">
+        <img src="https://img.youtube.com/vi/jEhU5ofUhJw/hqdefault.jpg" alt="Claro TV HD">
+      </a>
+      <p>Claro TV HD</p>
+    </div>
+    <div>
+      <a href="https://www.youtube.com/watch?v=UyMP71Kz-e8" target="_blank">
+        <img src="https://img.youtube.com/vi/UyMP71Kz-e8/hqdefault.jpg" alt="Recarga fácil">
+      </a>
+      <p>Recarga fácil</p>
+    </div>
+    <div>
+      <a href="https://www.youtube.com/watch?v=PqPIp5X-BNs" target="_blank">
+        <img src="https://img.youtube.com/vi/PqPIp5X-BNs/hqdefault.jpg" alt="Bonos exclusivos">
+      </a>
+      <p>Bonos exclusivos</p>
+    </div>
+    <div>
+      <a href="https://www.youtube.com/watch?v=bAc28YEKFPU" target="_blank">
+        <img src="https://img.youtube.com/vi/bAc28YEKFPU/hqdefault.jpg" alt="Planes prepago">
+      </a>
+      <p>Planes prepago</p>
+    </div>
+    <div>
+      <a href="https://www.youtube.com/watch?v=CAaedJUQXNg" target="_blank">
+        <img src="https://img.youtube.com/vi/CAaedJUQXNg/hqdefault.jpg" alt="Internet veloz">
+      </a>
+      <p>Internet veloz</p>
+    </div>
+    <div>
+      <a href="https://www.youtube.com/watch?v=LYHzsO1w4s8" target="_blank">
+        <img src="https://img.youtube.com/vi/LYHzsO1w4s8/hqdefault.jpg" alt="Claro Hogar">
+      </a>
+      <p>Claro Hogar</p>
+    </div>
+  </div>
+</section>
+
 
     <section id="contacto">
       <h2>Contáctanos</h2>
