--- a/index.html
+++ b/index.html
@@ -22,48 +22,48 @@
   </header>
 
   <main class="container">
-    <section id="inicio" class="seccion-activa galeria">
+   <section id="inicio" class="seccion-activa galeria">
   <h2>Promociones Claro</h2>
   <div class="collage">
-    <!-- Videos como enlaces con miniaturas -->
     <div>
-      <a href="https://www.youtube.com/watch?v=jEhU5ofUhJw" target="_blank">
+      <a href="https://www.youtube.com/watch?v=jEhU5ofUhJw" target="_blank" rel="noopener">
         <img src="https://img.youtube.com/vi/jEhU5ofUhJw/hqdefault.jpg" alt="Claro TV HD">
       </a>
       <p>Claro TV HD</p>
     </div>
     <div>
-      <a href="https://www.youtube.com/watch?v=UyMP71Kz-e8" target="_blank">
+      <a href="https://www.youtube.com/watch?v=UyMP71Kz-e8" target="_blank" rel="noopener">
         <img src="https://img.youtube.com/vi/UyMP71Kz-e8/hqdefault.jpg" alt="Recarga fácil">
       </a>
       <p>Recarga fácil</p>
     </div>
     <div>
-      <a href="https://www.youtube.com/watch?v=PqPIp5X-BNs" target="_blank">
+      <a href="https://www.youtube.com/watch?v=PqPIp5X-BNs" target="_blank" rel="noopener">
         <img src="https://img.youtube.com/vi/PqPIp5X-BNs/hqdefault.jpg" alt="Bonos exclusivos">
       </a>
       <p>Bonos exclusivos</p>
     </div>
     <div>
-      <a href="https://www.youtube.com/watch?v=bAc28YEKFPU" target="_blank">
+      <a href="https://www.youtube.com/watch?v=bAc28YEKFPU" target="_blank" rel="noopener">
         <img src="https://img.youtube.com/vi/bAc28YEKFPU/hqdefault.jpg" alt="Planes prepago">
       </a>
       <p>Planes prepago</p>
     </div>
     <div>
-      <a href="https://www.youtube.com/watch?v=CAaedJUQXNg" target="_blank">
+      <a href="https://www.youtube.com/watch?v=CAaedJUQXNg" target="_blank" rel="noopener">
         <img src="https://img.youtube.com/vi/CAaedJUQXNg/hqdefault.jpg" alt="Internet veloz">
       </a>
       <p>Internet veloz</p>
     </div>
     <div>
-      <a href="https://www.youtube.com/watch?v=LYHzsO1w4s8" target="_blank">
+      <a href="https://www.youtube.com/watch?v=LYHzsO1w4s8" target="_blank" rel="noopener">
         <img src="https://img.youtube.com/vi/LYHzsO1w4s8/hqdefault.jpg" alt="Claro Hogar">
       </a>
       <p>Claro Hogar</p>
     </div>
   </div>
 </section>
+
 
 
     <section id="contacto">
