--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6XGMKXZ6PM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G-6XGMKXZ6PM');
+</script>
+
+
+
   <header>
     <img src="logo-removebg-preview.png" alt="¡Claro Nicaragua!" class="logo" />
     <nav>
