--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-G-6XGMKXZ6PM');
+  gtag('config', 'G-6XGMKXZ6PM');
 </script>
-
 
 
   <header>
