Corrijo ubicación de Google Analytics

--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Claro - Servicios</title>
   <link rel="stylesheet" href="style.css" />
+
+<!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6XGMKXZ6PM"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-6XGMKXZ6PM');
+  </script>
+  <!-- Fin Google Analytics -->
+
+
+
 </head>
 <body>
-
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6XGMKXZ6PM"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-6XGMKXZ6PM');
-</script>
-
 
   <header>
     <img src="logo-removebg-preview.png" alt="¡Claro Nicaragua!" class="logo" />
