--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <main class="container">
     <section id="inicio" class="seccion-activa galeria">
-      <h2>Promociones Claro</h2>
+      <h2>PROMOCIONES CLARO</h2>
       <div class="collage">
         <!-- Videos embebidos -->
         <div><iframe width="280" height="158" src="https://www.youtube.com/embed/jEhU5ofUhJw"></iframe><p>Claro TV HD</p></div>
